# Distribution-Builder-Cmake

./: .gitignore  Changes  META6.json  README.md  dist.ini
lib/Distribution/Builder/: Cmake.rakumod
t/: 01-basic.rakutest
t/cc/: CMakeLists.txt  test.cpp
